# zk-groth16-bls12-381-vara

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  OBSERVABILITY.md  README.md
.github/workflows/: ci.yml
artifacts/: check-no-leak.sh  deploy.sh  deploy_args.json  verify.sh
crates/circuit/: Cargo.toml
crates/circuit/src/: hash.rs  lib.rs  main.rs
crates/keys/: Cargo.toml
crates/keys/src/: lib.rs  main.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs  main.rs
crates/verifier-app/: .gitignore  Cargo.toml  build.rs
crates/verifier-app/app/: Cargo.toml
crates/verifier-app/app/src/: lib.rs
crates/verifier-app/app/src/services/: errors.rs  events.rs  groth16.rs  mod.rs  service.rs  state.rs  types.rs
crates/verifier-app/client/: Cargo.toml  build.rs
crates/verifier-app/client/src/: lib.rs
crates/verifier-app/src/: lib.rs
crates/verifier-app/tests/: verify_test.rs
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.scss  App.tsx  consts.ts  idl.ts  index.scss  main.tsx
frontend/src/data/: proof.json  public.json
frontend/src/hocs/: index.tsx
frontend/src/hooks/: useVerifier.ts
observability/telemetry/: Cargo.toml
observability/telemetry/src/: lib.rs
