[package]
name = "zk-verifier-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
sails-rs.workspace = true

# BLS12-381 builtin helper. We use ITS re-exports for ALL arkworks types
# (ark_bls12_381, ark_ec, ark_ff, ark_scale, ark_serialize) — adding ark crates
# directly drags incompatible versions / serde into the no_std Wasm graph and
# breaks the build. This mirrors the working gear-foundation/zk-mental-poker
# `zk-verification` contract.
# default-features = false keeps `ark-scale/std` (and its serde→serde_core,
# which cannot build for the no_std wasm target) out of the on-chain graph.
gbuiltin-bls381 = { version = "1.10.0", default-features = false }
hex-literal = "0.4"

# vk integrity fingerprint (SHA-256), no_std-clean (no serde).
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
